# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-04 02:16:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-32

    Summary:
      Renamed POSIX to Posix
    Revision:
      missingh--head--0.7--patch-32


    modified files:
     ChangeLog libsrc/MissingH/Checksum/CRC32/Posix.hs
     testsrc/CRC32POSIXtest.hs

    renamed files:
     libsrc/MissingH/Checksum/CRC32/POSIX.hs
       ==> libsrc/MissingH/Checksum/CRC32/Posix.hs


2004-12-04 02:03:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-31

    Summary:
      Gzip is working now.
    Revision:
      missingh--head--0.7--patch-31


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-04 02:01:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-30

    Summary:
      Checkpointing some more
    Revision:
      missingh--head--0.7--patch-30


    new files:
     testsrc/CRC32GZIPtest.hs

    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs testsrc/Tests.hs

    renamed files:
     testsrc/CRC32test.hs
       ==> testsrc/CRC32POSIXtest.hs


2004-12-04 01:58:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-29

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-29


    new files:
     libsrc/MissingH/Checksum/CRC32/.arch-ids/=id
     libsrc/MissingH/Checksum/CRC32/GZip.hs

    modified files:
     ChangeLog libsrc/MissingH/Checksum/CRC32/POSIX.hs
     libsrc/MissingH/FileArchive/GZip.hs testsrc/CRC32test.hs

    renamed files:
     libsrc/MissingH/Checksum/CRC32.hs
       ==> libsrc/MissingH/Checksum/CRC32/POSIX.hs

    new directories:
     libsrc/MissingH/Checksum/CRC32
     libsrc/MissingH/Checksum/CRC32/.arch-ids


2004-12-04 01:27:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-28

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-28


    modified files: